<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="nl.mprog.Ghost.GameActivity"
    android:id="@+id/gameLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Player 1"
        android:gravity="start"
        android:id="@+id/player1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Player 2"
        android:gravity="end"
        android:id="@+id/player2"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/wordView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="127dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gameInput"
        android:hint="@string/hint"
        android:gravity="center"
        android:layout_below="@+id/wordView"
        android:layout_marginTop="97dp"
        android:layout_toEndOf="@+id/player1"
        android:layout_toStartOf="@+id/player2" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:id="@+id/gameReturn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/confirm"
        android:onClick="onClickHome"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/gameReset"
        android:layout_alignBottom="@+id/gameReturn"
        android:layout_alignEnd="@+id/gameInput"
        android:layout_toEndOf="@+id/player1"
        android:onClick="onClickReset"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Options"
        android:id="@+id/gameOptions"
        android:layout_alignTop="@+id/gameReset"
        android:layout_alignEnd="@+id/player2"
        android:onClick="onClickOptions"
        android:layout_toEndOf="@+id/confirm" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameInput"
        android:layout_alignStart="@+id/gameInput"
        android:layout_alignEnd="@+id/gameInput"
        android:text="@string/confirm"
        android:id="@+id/confirm"
        android:onClick="play"/>
</RelativeLayout>
